<resources>
    <string name="app_name">TaskManager</string>
    <string name="add_a_task">Add A Task</string>
    <string name="task">Task?</string>
    <string name="description">Description</string>
    <string name="done_by">Done By?</string>
    <string name="submit">Submit!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
</resources>